--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -137,7 +137,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="          "
+        android:text="X Turn"
         android:id="@+id/textView3"
         android:layout_alignParentBottom="true"
         android:layout_alignLeft="@+id/button6"
